fixed 404 responsivity, tenant profile width and counter on carousel on mobile

--- a/src/styles/Carousel.css
+++ b/src/styles/Carousel.css
@@ -37,16 +37,25 @@
 }
 
 .indicator {
-  position: absolute;
-  color: white;
-  font-size: 20px;
-  font-weight: 500;
-  bottom: 10px;
+  display: none;
 }
 
 /*******  MEDIA QUERIES  *******/
 @media (min-width: 600px) {
   .arrow {
     height: 100px;
+  }
+
+  .indicator {
+    display: flex;
+    position: absolute;
+    color: white;
+    font-size: 20px;
+    font-weight: 500;
+    bottom: 10px;
+  }
+
+  .slide-hidden {
+    display: none;
   }
 }
